# fastapi-task-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test_db.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0cc94a83e21e_create_users_and_tasks.py
app/: main.py
app/api/: auth.py  tasks.py
app/core/: auth_deps.py  config.py  security.py
app/db/: session.py
app/models/: __init__.py  base.py  task.py  user.py
app/schemas/: auth.py  task.py  user.py
app/services/: task_service.py  user_service.py
app/static/: swagger-dark.css
tests/: conftest.py  test_auth.py  test_tasks.py
